--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <section>
       <div class="feature-container">
         <div class="feature-content">
-          <h2 class="feature-title">Features you will love & enjoy</h2>
+          <h2 class="feature-title">Features you will <br> love & enjoy</h2>
           <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the
             majority have suffered alteration in some form,
             by injected humour, or randomised words which don't look even</p>
@@ -92,6 +92,10 @@
         </div>
         <div class="feature-img">
           <img class="feature-image" src="architect.png" alt="">
+          <div class="ten-years">
+            <h3>10+Year</h3>
+            <p>Experience</p>
+          </div>
         </div>
       </div>
     </section>
